Overflow issue solved

--- a/src/main/resources/static/home.css
+++ b/src/main/resources/static/home.css
@@ -162,7 +162,7 @@ body::-webkit-scrollbar {
 }
 .aboutanime{
     padding: 8%;
-    width: 10vw;
+    width: 30vw;
     /* background-color:#124559; */
     background-color: #123c4a;
     display: none;
